# MSDA

./: .gitignore  CMakeLists.txt  README.md  running.sh  testing.sh
.github/workflows/: cmake.yml
include/: doublylinkedlist.h  linkedlist.h
src/: add.c  main.c
src/doublylinkedlist/: doublylinkedlist.c
src/linkedlist/: linkedlist.c
test/: main_test.c
test/add/: add_test.c  add_test.h
test/heap/: heap_test.c
test/linkedlist/: linkedlist_test.c
test/stack/: stack_test.c
